fix(cors): reemplazo de CorsConfig y actualizacion en SecurityConfig